# weather_server

./: README.md  fastmcp.json  pyproject.toml  server.py  weather.py
weather/: README.md  app.py  claude_desktop_config.json  pyproject.toml  run_mcp.py  weather.py
