[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.17.0",
]

[project.scripts]
# Expose a `weather` command that runs the CLI in weather.weather:main
weather = "weather.weather:main"
